--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,7 @@ h1 {
     display: inline-block;
     margin-left: 1rem;
     background-color: rgb(255, 255, 255);
+    color: rgb(29, 29, 29);
 }
 
 div {
