--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script:700|Kaushan+Script');
+$color1: hsl(237, 100%, 76%);
+$color2: hsl(237, 100%, 70%);
+
+$primaryColor: $color1;
+$primaryHoverDarkColor: $color2;
 button {
     border-radius: 30%;
     padding: 5px;
     padding-bottom: 10px;
-    background-color: skyblue;
+    background-color: $primaryColor;
     border: 0;
+    color: white;
 }
 
 button:hover {
-    background: linear-gradient(#87ceeb, rgb(75, 178, 226));
+    background: linear-gradient($primaryColor, $primaryHoverDarkColor);
     cursor: pointer;
 }
 
-button:active {
+button:active { 
     transform: scale(0.95);
 }
 
