--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -9,7 +9,9 @@
     }">
     comment {{commentNumber}} works!
   </p>
-  <button (click)="onReply()" (mouseover)="onHover()"  (mouseleave)="onMouseLeave()">reply</button>
+  <span  (click)="onReply()" (mouseover)="onHover()"  (mouseleave)="onMouseLeave()">
+    <i class="fa fa-reply"></i>
+  </span>
   <ng-container *ngFor="let reply of commentReplies; index as index">
     <app-comment [childOrder]="index" (childEvent)="onReceiveChildEvent($event)"></app-comment>
   </ng-container>
