--- a/src/app/comment/comment.component.scss
+++ b/src/app/comment/comment.component.scss
@@ -23,6 +23,10 @@ p {
     display: inline-block;
 }
 
+i {
+    margin-left: 0;
+}
+
 .third-order-child {
     border-left: 0.2rem solid $thirdOrderBorderColor;
 }
