Icon changed to button again as icon is not rendering on stackblitz

--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -9,9 +9,10 @@
     }">
     comment {{commentNumber}} works!
   </p>
-  <span  (click)="onReply()" (mouseover)="onHover()"  (mouseleave)="onMouseLeave()">
+  <!-- <span  (click)="onReply()" (mouseover)="onHover()"  (mouseleave)="onMouseLeave()">
     <i class="fa fa-reply"></i>
-  </span>
+  </span> -->
+  <button (click)="onReply()" (mouseover)="onHover()"  (mouseleave)="onMouseLeave()">reply</button>
   <ng-container *ngFor="let reply of commentReplies; index as index">
     <app-comment [childOrder]="index" (childEvent)="onReceiveChildEvent($event)"></app-comment>
   </ng-container>
